--- a/pages/sv/sv2.html
+++ b/pages/sv/sv2.html
@@ -36,23 +36,33 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-3">
+            <div class="row mb-3 d-flex align-items-center">
                 <div class="col set-progress">
                     <div class="progress" role="progressbar" aria-label="Set Completion" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar" id="progressBar" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="row">
+                        <div class="col-6 pe-0">
+                            <button type="button" class="btn btn-primary collection-check collection-add" id="selectAllButton">Add All</button>
+                        </div>
+                        <div class="col-6 pe-0">
+                            <button type="button" class="btn btn-primary collection-check collection-remove" id="removeAllButton">Remove All</button>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col card-list p-0 p-sm-2" id="cardList">
                     <div class="container gx-1">
-                        <div class="row">
+                        <div class="row g-3" id="setCards">
+                            <!-- Auto Populated -->
+                        </div>
+                        <div class="row mt-2">
                             <div id="loading">
                                 <img class="d-block mx-auto" width="600" src="../../lib/imgs/loading.png" alt="Your Cards are Loading">
                             </div>
-                        </div>
-                        <div class="row g-3" id="setCards">
-                            <!-- Auto Populated -->
                         </div>
                     </div>
                 </div>
@@ -203,6 +213,7 @@
                     setCardsContainer.innerHTML = '';
 
                     setCodes.forEach(setCode => {
+                        const maxPages = 3;
                         let currentPage = 1;
 
                         const fetchAllPages = () => {
@@ -219,7 +230,8 @@
 
                                     const totalCards = response.data.totalCount;
                                     let cardCount = response.data.count;
-                                    if (cardCount < totalCards) {
+
+                                    if (cardCount < totalCards && currentPage < maxPages) {
                                         currentPage++;
                                         fetchAllPages();
                                     }
@@ -250,7 +262,7 @@
                         const cardImgHiResUrl = `${cardImgUrl}/${cardSetId}/${originalNumber}_hires.png`;
 
                         const cardElement = document.createElement('div');
-                        cardElement.setAttribute('class', `col-6 col-md-2 ${card.name} card-container`);
+                        cardElement.setAttribute('class', `col-4 col-md-2 ${card.name} card-container`);
                         cardElement.innerHTML = `
                             <div class="card">
                                 <img src="${card.images.small}" type="button" class="btn btn-primary" alt="${card.name}" data-bs-toggle="modal" data-bs-target="#${cardId}Modal" loading="lazy">
@@ -417,20 +429,37 @@
                 }
                 runUpdateScript();
                 
-                function checkAllCheckboxes() {
-                    var checkboxes = document.querySelectorAll('.card-check-input');
-                    checkboxes.forEach(function (checkbox) {
-                    checkbox.checked = true;
-                    });
-                }
+                document.addEventListener('DOMContentLoaded', function () {
+                    // Function to toggle checkboxes and swap button text
+                    function selectAllCheckboxes() {
+                        var checkboxes = document.querySelectorAll('.form-check-input');
+                        checkboxes.forEach(function (checkbox) {
+                        checkbox.checked = true;
+                        });
+                    }
+                    function deSelectAllCheckboxes() {
+                        var checkboxes = document.querySelectorAll('.form-check-input');
+                        checkboxes.forEach(function (checkbox) {
+                        checkbox.checked = false;
+                        });
+                    }
 
-                // Event listener for the "Check All Checkboxes" button
-                var checkAllButton = document.getElementById('checkAllButton');
-                if (checkAllButton) {
-                    checkAllButton.addEventListener('click', function () {
-                    checkAllCheckboxes();
-                    });
-                }
+                    // Event listener for the "Select All Checkboxes" button
+                    var selectAllButton = document.getElementById('selectAllButton');
+                    var removeAllButton = document.getElementById('removeAllButton');
+                    if (selectAllButton) {
+                        selectAllButton.addEventListener('click', function () {
+                        selectAllCheckboxes();
+                        updateProgressBar();
+                        });
+                    }
+                    if (removeAllButton) {
+                        removeAllButton.addEventListener('click', function () {
+                        deSelectAllCheckboxes();
+                        updateProgressBar();
+                        });
+                    }
+                });
             </script>
         </main>
     </body>
