Fix Set Check Buttons

--- a/pages/sv/sv3.html
+++ b/pages/sv/sv3.html
@@ -41,12 +41,12 @@
                     <div class="progress" role="progressbar" aria-label="Set Completion" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar" id="progressBar" style="width: 0%"></div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 mt-2 col-md-3">
                         <div class="row">
-                            <div class="col-6 pe-0">
+                            <div class="col-6 pe-sm-0">
                                 <button type="button" class="btn btn-primary collection-check collection-add" id="selectAllButton">Add All</button>
                             </div>
-                            <div class="col-6 pe-0">
+                            <div class="col-6 pe-sm-0">
                                 <button type="button" class="btn btn-primary collection-check collection-remove" id="removeAllButton">Remove All</button>
                             </div>
                         </div>
