Set Progress Button and Bar Fix

--- a/pages/sv/sv4.html
+++ b/pages/sv/sv4.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="row mb-3 d-flex align-items-center">
-                <div class="col-9 set-progress">
+                <div class="col set-progress">
                     <div class="progress" role="progressbar" aria-label="Set Completion" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar" id="progressBar" style="width: 0%"></div>
                     </div>
